fix uneven buttons

--- a/app/javascript/stylesheets/components/article.scss
+++ b/app/javascript/stylesheets/components/article.scss
@@ -81,7 +81,7 @@
 
 .btn-back-white {
   width: 300px;
-  margin: 0 0 20px;
+  margin: 10px 0;
   border: 1px solid;
   border-color: rgba(0,0,0,0.5);
   border-radius: 0px;
@@ -90,7 +90,7 @@
 
 .btn-back-grey {
   width: 300px;
-  margin-bottom: 10px;
+  margin: 10px 0;
   background: rgba(0,0,0,0.5);
   color: white;
   border-radius: 0px;
@@ -135,11 +135,11 @@
   }
   .back-buttons {
     .btn-back-white {
-      margin-bottom: 10px;
+      margin: 5px 0;
     }
   }
   .btn-back-white {
-    margin-bottom: 10px;
+    margin: 5px 0;
   }
 }
 
