--- a/app/javascript/stylesheets/components/form.scss
+++ b/app/javascript/stylesheets/components/form.scss
@@ -37,6 +37,10 @@ input[type=submit] {
   width: 80%;
 }
 
+.comment-buttons {
+  margin-bottom: 20px;
+}
+
 .btn-small {
   width: fit-content;
 }
